[gd_scene load_steps=17 format=3 uid="uid://cx0spg7oxsiid"]

[ext_resource type="Script" uid="uid://baqdapvh5tjas" path="res://Menu/LevelUpMenu.gd" id="1_huaid"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dputm"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40kaa"]
bg_color = Color(0, 0.51, 0.136, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn4f0"]
bg_color = Color(0.37, 0, 0.0554999, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4eh1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcnve"]
bg_color = Color(0, 0.509804, 0.137255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh74m"]
bg_color = Color(0.368627, 0, 0.054902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vy18r"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gsfb0"]
bg_color = Color(0, 0.509804, 0.137255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7670b"]
bg_color = Color(0.368627, 0, 0.054902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qymkp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5u3m4"]
bg_color = Color(0, 0.509804, 0.137255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_on1oe"]
bg_color = Color(0.368627, 0, 0.054902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7q0sg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70tvn"]
bg_color = Color(0, 0.509804, 0.137255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vseo"]
bg_color = Color(0.368627, 0, 0.054902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="LevelUpMenu" type="CanvasLayer"]
script = ExtResource("1_huaid")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -160.0
offset_right = 224.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="StrategyTimerLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 64.0
offset_top = 232.0
offset_right = 368.0
offset_bottom = 296.0
scale = Vector2(1.05164, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="StrategyContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -80.0
offset_right = 85.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)

[node name="WarriorButton" type="Button" parent="Panel/StrategyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Воин"

[node name="AssassinButton" type="Button" parent="Panel/StrategyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ассасин"

[node name="TankButton" type="Button" parent="Panel/StrategyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Танк"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -156.0
offset_right = 104.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Получен уровень!"
horizontal_alignment = 1

[node name="HBOXstr" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StrengthLabel" type="Label" parent="Panel/VBoxContainer/HBOXstr"]
layout_mode = 2

[node name="StrengthButton" type="Button" parent="Panel/VBoxContainer/HBOXstr"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_dputm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_40kaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_qn4f0")
text = "  +1  "

[node name="HBOXfort" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FortitudeLabel" type="Label" parent="Panel/VBoxContainer/HBOXfort"]
layout_mode = 2

[node name="FortitudeButton" type="Button" parent="Panel/VBoxContainer/HBOXfort"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_n4eh1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qcnve")
theme_override_styles/normal = SubResource("StyleBoxFlat_sh74m")
text = "  +1  "

[node name="HBOXagil" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AgilityLabel" type="Label" parent="Panel/VBoxContainer/HBOXagil"]
layout_mode = 2

[node name="AgilityButton" type="Button" parent="Panel/VBoxContainer/HBOXagil"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_vy18r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gsfb0")
theme_override_styles/normal = SubResource("StyleBoxFlat_7670b")
text = "  +1  "

[node name="HBOXend" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnduranceLabel" type="Label" parent="Panel/VBoxContainer/HBOXend"]
layout_mode = 2

[node name="EnduranceButton" type="Button" parent="Panel/VBoxContainer/HBOXend"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_qymkp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5u3m4")
theme_override_styles/normal = SubResource("StyleBoxFlat_on1oe")
text = "  +1  "

[node name="HBOXluck" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LuckLable" type="Label" parent="Panel/VBoxContainer/HBOXluck"]
layout_mode = 2

[node name="LuckButton" type="Button" parent="Panel/VBoxContainer/HBOXluck"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_7q0sg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_70tvn")
theme_override_styles/normal = SubResource("StyleBoxFlat_4vseo")
text = "  +1  "

[node name="PointsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Очков: "
horizontal_alignment = 2
vertical_alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Подтвердить"

[node name="VBoxTimer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -136.0
offset_top = -32.0
offset_right = 136.0
grow_horizontal = 2
grow_vertical = 0

[node name="TimerLabel" type="Label" parent="Panel/VBoxTimer"]
layout_mode = 2

[node name="AutoDistributeTimer" type="Timer" parent="Panel/VBoxTimer"]

[connection signal="pressed" from="Panel/StrategyContainer/WarriorButton" to="." method="_on_warrior_button_pressed"]
[connection signal="pressed" from="Panel/StrategyContainer/AssassinButton" to="." method="_on_assasin_button_pressed"]
[connection signal="pressed" from="Panel/StrategyContainer/TankButton" to="." method="_on_tank_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBOXstr/StrengthButton" to="." method="_on_strength_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBOXfort/FortitudeButton" to="." method="_on_fortitude_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBOXagil/AgilityButton" to="." method="_on_agility_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBOXend/EnduranceButton" to="." method="_on_endurance_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBOXluck/LuckButton" to="." method="_on_luck_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
